scripts/nullaway/annotator/url0980c8326f_TobiasScharnowski_Chess_tgz-pJ8-chess_StartJ8.txt
../annotator/url0980c8326f_TobiasScharnowski_Chess_tgz-pJ8-chess_StartJ8/src/chess/move/impl/CastlingMove.java:24: error: [NullAway] passing @Nullable parameter 'rookSource' where @NonNull is required
	this.moveFromTo(pos, rookSource, rookDest);
	                     ^
    (see http://t.uber.com/nullaway )
../annotator/url0980c8326f_TobiasScharnowski_Chess_tgz-pJ8-chess_StartJ8/src/chess/move/impl/CastlingMove.java:30: error: [NullAway] passing @Nullable parameter 'rookDest' where @NonNull is required
	this.moveFromTo(pos, rookDest, rookSource);
	                     ^
    (see http://t.uber.com/nullaway )
../annotator/url0980c8326f_TobiasScharnowski_Chess_tgz-pJ8-chess_StartJ8/src/chess/move/impl/CastlingMove.java:30: error: [NullAway] passing @Nullable parameter 'rookSource' where @NonNull is required
	this.moveFromTo(pos, rookDest, rookSource);
	                               ^
    (see http://t.uber.com/nullaway )
../annotator/url0980c8326f_TobiasScharnowski_Chess_tgz-pJ8-chess_StartJ8/src/chess/move/impl/CastlingMove.java:35: error: [NullAway] returning @Nullable expression from method with @NonNull return type
	return this.rookSource;
	^
    (see http://t.uber.com/nullaway )
../annotator/url0980c8326f_TobiasScharnowski_Chess_tgz-pJ8-chess_StartJ8/src/chess/move/impl/PawnPromotionMove.java:51: error: [NullAway] dereferenced expression movingPawn is @Nullable
	movingPawn.setActive(true);
	          ^
    (see http://t.uber.com/nullaway )
../annotator/url0980c8326f_TobiasScharnowski_Chess_tgz-pJ8-chess_StartJ8/src/chess/piece/impl/AbstractPiece.java:39: error: [NullAway] initializer method does not guarantee @NonNull field coord (line 20) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public AbstractPiece(final Position pos, final PieceType pieceType,
           ^
    (see http://t.uber.com/nullaway )
../annotator/url0980c8326f_TobiasScharnowski_Chess_tgz-pJ8-chess_StartJ8/src/chess/impl/DefaultPosition.java:32: error: [NullAway] initializer method does not guarantee @NonNull fields moves (line 24), activeColor (line 25), castlingAvailability (line 29) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    private DefaultPosition() {
            ^
    (see http://t.uber.com/nullaway )
../annotator/url0980c8326f_TobiasScharnowski_Chess_tgz-pJ8-chess_StartJ8/src/chess/impl/DefaultPosition.java:33: error: [NullAway] assigning @Nullable expression to @NonNull field
        pieces = null;
               ^
    (see http://t.uber.com/nullaway )
../annotator/url0980c8326f_TobiasScharnowski_Chess_tgz-pJ8-chess_StartJ8/src/chess/impl/DefaultPosition.java:167: error: [NullAway] dereferenced expression this.pieceSets.get(piece.getColor()) is @Nullable
        this.pieceSets.get(piece.getColor()).add(piece);
                                            ^
    (see http://t.uber.com/nullaway )
../annotator/url0980c8326f_TobiasScharnowski_Chess_tgz-pJ8-chess_StartJ8/src/chess/impl/DefaultPosition.java:179: error: [NullAway] dereferenced expression this.pieceSets.get(piece.getType()) is @Nullable
            this.pieceSets.get(piece.getType()).remove(piece);
                                               ^
    (see http://t.uber.com/nullaway )
../annotator/url0980c8326f_TobiasScharnowski_Chess_tgz-pJ8-chess_StartJ8/src/chess/impl/DefaultPosition.java:193: error: [NullAway] enhanced-for expression opponentsPieces is @Nullable
        for (Piece p : opponentsPieces) {
                       ^
    (see http://t.uber.com/nullaway )
../annotator/url0980c8326f_TobiasScharnowski_Chess_tgz-pJ8-chess_StartJ8/src/chess/impl/DefaultPosition.java:203: error: [NullAway] dereferenced expression move is @Nullable
        move.doMove(this);
            ^
    (see http://t.uber.com/nullaway )
../annotator/url0980c8326f_TobiasScharnowski_Chess_tgz-pJ8-chess_StartJ8/src/chess/impl/DefaultPosition.java:224: error: [NullAway] enhanced-for expression this.pieceSets.get(this.getActiveColor()) is @Nullable
        for (Piece piece : this.pieceSets.get(this.getActiveColor())) {
                                             ^
    (see http://t.uber.com/nullaway )
../annotator/url0980c8326f_TobiasScharnowski_Chess_tgz-pJ8-chess_StartJ8/src/chess/impl/DefaultPosition.java:253: error: [NullAway] enhanced-for expression this.pieceSets.get(color) is @Nullable
        for (Piece piece : this.pieceSets.get(color)) {
                                             ^
    (see http://t.uber.com/nullaway )
14 errors
